--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "mi",
   "version": "1.0.0",
   "scripts": {
-    "build": "esbuild src/main.ts --bundle --minify --outfile=dist/cli.js --platform=node"
+    "build": "esbuild src/main.ts --bundle --minify --outfile=dist/cli.js --platform=node",
+    "git:add": "git add .",
+    "git:commit": "git commit "
   },
   "devDependencies": {
     "@types/node": "^20.4.0",
