--- a/.github/workflows/daily-task.yml
+++ b/.github/workflows/daily-task.yml
@@ -3,6 +3,7 @@ name: Daily Task
 on:
   schedule:
     - cron:  '0 */4 * * *' # 每4小时运行一次
+  workflow_dispatch:
 
 jobs:
   build:
@@ -15,7 +16,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14' # 您可以选择需要的 Node.js 版本
+          node-version: '20' # 您可以选择需要的 Node.js 版本
 
       - name: Install dependencies
         run: npm i
