--- a/.github/workflows/daily-task.yml
+++ b/.github/workflows/daily-task.yml
@@ -29,5 +29,6 @@ jobs:
           git diff
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Action"
+          git add .
           git commit -am "Automated snapshot" || exit 0
           git push
