--- a/.github/workflows/daily-task.yml
+++ b/.github/workflows/daily-task.yml
@@ -2,7 +2,7 @@ name: Daily Task
 
 on:
   schedule:
-    - cron:  '0 */4 * * *' # 每4小时运行一次
+    - cron:  '0 8-20/4 * * *' # 每4小时运行一次
   workflow_dispatch:
 
 jobs:
